<resources>
    <string name="app_name">メニューサンプル</string>
    <string name="tv_menu_unit">円</string>
    <string name="menu_list_options_teishoku">定食</string>
    <string name="menu_list_options_curry">カレー</string>
    <string name="menu_list_context_desc">説明を表示</string>
    <string name="menu_list_context_order">ご注文</string>
    <string name="menu_list_context_header">操作を選んでください</string>
    <string name="tv_thx_title">注文完了</string>
    <string name="tv_thx_desc">以下のご注文を受け付けました。 \nご注文ありがとうございます。</string>
    <string name="bt_thx_back">リストに戻る</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>